--- a/src/scss/_components.scss
+++ b/src/scss/_components.scss
@@ -2,15 +2,35 @@
 
 .card {
     border-radius: x.$u4;
-    background-color: var(--dark-3);
+    background-color: var(--dark-2);
     border: var(--light-3) solid 1px;
-    padding: x.$u6;
+    padding: x.$u5;
+    display: flex;
+    flex-direction: column;
+    gap: x.$u3;
+}
+
+.card-text {
+    font-size: x.$text-base;
+    color: var(--light-2)
 }
 
 .section-title {
     @include x.inter(600);
     color: var(--light-1);
     font-size: x.$text-xxl;
+}
+
+.section-text {
+    font-size: x.$text-lg;
+    color: var(--light-2);
+    @include x.space;
+
+    span {
+        color: var(--light-1);
+        font-size: x.$text-lg;
+        @include x.space(600);
+    }
 }
 
 .tag {
@@ -25,6 +45,11 @@
     font-size: x.$text-sm;
 }
 
+main {
+    width: 100%;
+    height: 100%;
+}
+
 h1,
 h2,
 h3,
@@ -35,9 +60,14 @@ h6 {
     @include x.inter(600);
 }
 
+h3 {
+    font-size: x.$text-md;
+}
+
 small {
     color: var(--light-1);
     font-size: x.$text-sm;
+    @include x.space(600);
 }
 
 a,
@@ -71,6 +101,10 @@ footer {
     align-items: center;
 }
 
+section {
+    border-bottom: 1px solid var(--light-3);
+}
+
 button {
     border: none;
     cursor: pointer;
@@ -89,6 +123,7 @@ button {
     display: flex;
     flex-direction: column;
 }
+
 
 @keyframes float {
     0% {
