--- a/src/scss/_solutions.scss
+++ b/src/scss/_solutions.scss
@@ -12,12 +12,16 @@
 
     &__content {
         display: flex;
+        justify-content: center;
+        flex-wrap: wrap;
         gap: x.$u2;
         margin-top: x.$u5;
     }
 
     &__card {
-
+        flex: 1;
+        min-width: 300px;
+        max-width: 700px;
 
         svg {
             fill: var(--primary);
