--- a/src/scss/_reset.scss
+++ b/src/scss/_reset.scss
@@ -29,3 +29,9 @@ body {
     background-color: var(--primary);
     color: var(--light-1);
 }
+
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
+}
