--- a/src/scss/_hero.scss
+++ b/src/scss/_hero.scss
@@ -174,6 +174,8 @@
             font-size: x.$text-base;
             padding: x.$u3 x.$u6;
             border-radius: x.$u1;
+            @include x.space(600);
+            text-transform: uppercase;
 
             svg {
                 width: 16px;
