feat: :fire: add projetos & function calculator

--- a/src/scss/_projects.scss
+++ b/src/scss/_projects.scss
@@ -87,5 +87,10 @@
                 }
             }
         }
+
+        &:hover {
+            border-color: var(--primary);
+            transform: translateY(-10px);
+        }
     }
 }
